--- a/netlify.toml
+++ b/netlify.toml
@@ -30,6 +30,13 @@
   [headers.values]
     Cache-Control = "public, max-age=31536000, immutable"
 
+# Redirect www to non-www
+[[redirects]]
+  from = "https://www.getspelly.com/*"
+  to = "https://getspelly.com/:splat"
+  status = 301
+  force = true
+
 # Redirect all traffic to HTTPS
 [[redirects]]
   from = "http://*"
