--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "marked": "^15.0.7",
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.4.38",
     "vuetify": "^3.5.4"
