--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxtjs/robots": "^5.2.2",
     "@nuxtjs/sitemap": "^7.2.4",
     "marked": "^15.0.7",
+    "nuxt-gtag": "^3.0.2",
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.4.38",
     "vuetify": "^3.5.4"
